--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 cgmath = "0.18.0"
 derive_more = "0.99.16"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 criterion = "0.3.5"
