--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cached = "0.24.0"
 cgmath = "0.18.0"
 clippy = "0.0.302"
 derive_more = "0.99.16"
