--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "cubesim"
 description = "NxNxN Rubik's Cube simulator (and eventually solver) written entirely in Rust."
-version = "0.0.2"
+version = "0.0.3"
 authors = ["Vincent Wong <vincent@vwong.dev>"]
 edition = "2018"
 keywords = ["rubiks", "cube", "rubiks_cube"]
 license = "MIT"
-repository = "https://github.com/V-Wong/CubeSim2/"
+repository = "https://github.com/V-Wong/CubeSimRS/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
