--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ cached = "0.24.0"
 cgmath = "0.18.0"
 derive_more = "0.99.16"
 lazy_static = "1.4.0"
+rustc-hash = "1.1.0"
 
 [dev-dependencies]
 criterion = "0.3.5"
